--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '23'
 
       - name: Install Dependencies
         run: npm install
@@ -25,9 +25,10 @@ jobs:
         run: npm test
 
       - name: Add Changes
+        if: ${{ success() }}
         run: |
-          git config --global user.email "hopeigbinosa063@gmail.com"
-          git config --global user.name "hopeigbinosa123"
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
           git add .
           git commit -m "Automated commit"
           git push origin master
